# open_rag_app_oshimatic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  rag_public_dataset_collector_colab.ipynb
.github/workflows/: ci.yml
docs/: DATA_ANALYSIS_PROJECT_IMPACT_SUMMARY.md  PHASE_0_IMPLEMENTATION_PLAN.md  PHASE_0_REVISION_PROMPT.md  PHASE_1_IMPLEMENTATION_PLAN.md  RAG_APPLICATION_DEVELOPMENT_PLAN.md  REPOSITORY_STRUCTURE_PROPOSAL.md
docs/adr/: 0001-phase-0-boundaries.md
experiments/configs/: phase0-example.json
notebooks/data_analysis/: rag_dataset_build_readiness_analysis_colab.ipynb
notebooks/data_collection/: rag_public_dataset_collector_colab.ipynb
scripts/: check_repository.py  verify_wheel.py
src/rag_app/: __init__.py  main.py
src/rag_app/api/: app.py  dependencies.py  errors.py  middleware.py
src/rag_app/application/: __init__.py  ports.py  readiness.py  runs.py
src/rag_app/config/: loader.py  models.py
src/rag_app/domain/: __init__.py  benchmarks.py  documents.py  errors.py  experiments.py  identifiers.py  indexes.py  queries.py  runs.py
src/rag_app/infrastructure/: __init__.py
tests/: conftest.py
tests/fixtures/: experiment_manifest_v3.json
tests/golden/: test_manifest_golden.py
tests/integration/: test_opensearch_live.py  test_smoke.py  test_storage.py
tests/unit/: test_api.py  test_application_services.py  test_architecture.py  test_config.py  test_contracts.py  test_identifiers.py  test_observability.py  test_opensearch_health.py  test_readiness.py  test_runs.py
(+12 files in other folders)
